* Add AOT Cache support
Signed-off-by: Piotr Sobiech <piotr@sobie.ch>